# MPI-OMP-hybrid_HelloWorld

./: .gitignore  CMakeLists.txt  Makefile  README.md  hellowOMP.run  hybrid-hello.c  mpi  mpi-hello.c  omp-hello.c
